[tool.poetry]
name = "litoid"
version = "0.1.0"
description = "💡Sequence DMX lighting 💡"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-osc = "^1.8.1"
datacls = "^4.6.0"
mido = "^1.2.10"
tomlkit = "^0.11.6"
numpy = "^1.24.2"
pyenttec = {path = "../pyenttec"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
impall = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
